# rest_proj_tdd

./: pyproject.toml
files_test/: fibonacci.py  main.py
src/recommendation_system/: db.sqlite3
src/recommendation_system/movies/: models.py
src/recommendation_system/movies/migrations/: 0001_initial.py
src/recommendation_system/movies/tests/: factories.py
src/recommendation_system/recommendation_system/: asgi.py  settings.py  urls.py  wsgi.py
